--- a/courses/dl1/lesson4-imdb.ipynb
+++ b/courses/dl1/lesson4-imdb.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%reload_ext autoreload\n",
@@ -800,6 +802,7 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -1321,7 +1324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   },
   "toc": {
    "colors": {
